echeck Changelog

2025-01-07  Eric Herman <eric@freesa.org>

	for debug builds, save the intermediate compile files

	* Makefile: adjust CFLAGS for DEBUG to replace -pipe with -save-temps

2024-08-13  Eric Herman <eric@freesa.org>
	reorder and add section comments to eembed.h

	* src/eembed.h: reorder, comments

2024-08-12  Eric Herman <eric@freesa.org>

	rework eembed_ulong_to_str to avoid tmp buffer
	convert string-to-number wrapper-functions to #defines

	The following have been replaced with #define:

		int64_t eembed_str_to_long(const char *str, char **endptr);
		uint64_t eembed_str_to_ulong(const char *str, char **endptr);
		uint64_t eembed_hex_to_ulong(const char *str, char **endptr);

	Ensure the _to_str functions have distinct names,
	either using "_sprintf_" and "_diy_",
	and #define the following to point to the specific variant:
		eembed_long_to_str(char *buf, size_t size, int64_t l);
		eembed_ulong_to_str(char *buf, size_t size, uint64_t ul);
		eembed_float_to_str(char *buf, size_t size, long double f);
		eembed_ulong_to_hex(char *buf, size_t size, uint64_t z);

	* src/eembed.h: replace wrapper functions with #define
	* src/eembed.c: remove wrapper functions, avoid buffer
	* tests/test-eembed-float-to-str.c: test _diy_ variants if hosted
	* tests/test-eembed-long-to-str.c: test _diy_ variants if hosted
	* tests/test-eembed-ulong-to-hex.c: test _diy_ variants if hosted
	* tests/test-eembed-ulong-to-str.c: test _diy_ variants if hosted


2024-06-10  Eric Herman <eric@freesa.org>

	Major change to replace function pointers with defines.

	For example, on a hosted system, eembed.h provides:

		#define print_s(s) printf("%s", s)

	And on an Arduino, eembed.h provides:

		#define eembed_out Serial
		#define print_s(s) eembed_out.print(s)


	While the function pointers are handy, for some types of testing,
	the compilers were not reliably optimizing them out, mildly impacting
	speed and also visible (barely) in the firmware size.
