@@ -2,9 +2,15 @@ echeck Changelog
 
 2025-01-07  Eric Herman <eric@freesa.org>
 
+	ensure EEMBED_SSIZE_MAX is defined and use it
+	clarify some preprocessor usages
+	always export and test eembed_diy_strnlen
 	for debug builds, save the intermediate compile files
 
 	* Makefile: adjust CFLAGS for DEBUG to replace -pipe with -save-temps
+	* src/eembed.h: define EEMBED_SSIZE_MAX
+	* src/eembed.c: use EEMBED_SSIZE_MAX, always export eembed_diy_strnlen
+	* tests/test-eembed-strlen.c: always test eembed_diy_strnlen
 
 2024-08-13  Eric Herman <eric@freesa.org>
 	reorder and add section comments to eembed.h
